Fixed search block position and z-index
Closes #28

--- a/src/Nfq/Fairytale/FrontendBundle/Resources/style/block/auto_complete.less
+++ b/src/Nfq/Fairytale/FrontendBundle/Resources/style/block/auto_complete.less
@@ -1,10 +1,11 @@
 #auto-complete {
     position: absolute;
-    top: 80px;
-    left: 360px;
+    top: 40px;
     width: 390px;
     border: 1px solid #cccccc;
     padding: 20px;
+    z-index: 1;
+    background-color: #ffffff;
     .book-row {
         border-bottom: 1px solid #cccccc;
         padding-bottom: 10px;
@@ -24,6 +25,7 @@
         .book-info {
             padding-top: 5px;
             .book-title {
+                max-width: 277px;
                 color: #339999;
                 font-family: 'Exo 2 Bold', 'Exo 2';
                 font-size: 14px;
@@ -31,6 +33,7 @@
                 line-height: 16px;
             }
             .book-authors {
+                max-width: 277px;
                 color: #999999;
                 font-family: 'Exo 2 Extra Light Italic', 'Exo 2';
                 font-size: 12px;
