--- a/src/Nfq/Fairytale/FrontendBundle/Resources/style/block/content.less
+++ b/src/Nfq/Fairytale/FrontendBundle/Resources/style/block/content.less
@@ -21,9 +21,10 @@
             }
         }
         .search {
+            position: relative;
             padding-left: 0;
             border-bottom: 1px solid #000000;
-            img {
+            img.glass {
                 width: 38px;
                 height: 38px;
             }
